--- a/index.html
+++ b/index.html
@@ -316,6 +316,15 @@
     </section>
   </section>
 
+  <section class="subscription flex-center" id="services">
+    <h2 data-aos="flip-down">Get offers straight to your inbox</h2>
+    <p data-aos="fade-up">Sign up for the Sushiman Newsletter</p>
+
+    <div class="subscription__form" data-aos="fade-up">
+      <input type="text" placeholder="Enter your email address">
+      <button>Get Started</button>
+    </div>
+  </section>
 
   <script src="js/script.js" type="module"></script>
 </body>
